# rConcentricLayout

./: .gitignore  Cargo.toml  README.md
src/: concentric.rs  concentric_layout.rs  edge.rs  lib.rs  node.rs  node_angle.rs  node_connections.rs  node_coordinate.rs  normalize.rs  radius.rs  ring.rs  timer.rs
src/cpu/: concentric.rs  mod.rs  node_angle.rs  node_connections.rs  node_coordinate.rs  node_positions.rs  normalize.rs  ring.rs
src/entities/: edge.rs  mod.rs  node.rs  node_connections.rs  node_positions.rs  normalize.rs  ring.rs
src/gpu/: adapter.rs  concentric.rs  data.rs  mod.rs  node_connections.rs  node_positions.rs  normalize.rs
src/gpu/ring/: mod.rs  ring_index_assignment.rs
src/gpu/wgsl/: connections.wgsl  normalize.wgsl  positions.wgsl
src/gpu/wgsl/ring/: ring_index_assignment.wgsl
storage/sample-data/: concentric-calculation.json  concentric_nonmesh_star_100.json  graph_10000.json  graph_20000.json  nodes_10000_random.json  nodes_1000_random.json  nodes_100_full_mesh.json  nodes_10_full_mesh.json  nodes_2000_random.json  nodes_5000_random.json  sample-data-100-nodes-full-mesh-15-rings-neighbor.json  sample-data-100-nodes-full-mesh-15-rings.json  sample-data-100-nodes-full-mesh.json  sample-data-cytoscape.json  sample-data.json  sample_graph_1000.json  sample_scalefree_1000.json  sample_tree_1000.json  telco_realistic_1000_nodes.json  telco_sample.json
