[package]
name = "concentric-layout"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = "0.4.42"
crossbeam = "0.8.4"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabular = "0.2.0"
tokio = { version="1.48.0", features=["macros","test-util"] }
wgpu = { version="27.0.1", features=["serde","webgl"] }
